// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account reducer should handle the DID_SET action  1`] = `
Object {
  "claims": Object {
    "decoratedCredentials": Object {
      "Contact": Array [
        Object {
          "claimData": Object {
            "email": "",
          },
          "credentialType": "Email",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "keyboardType": "email-address",
          "subject": "",
        },
        Object {
          "claimData": Object {
            "telephone": "",
          },
          "credentialType": "Mobile Phone",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "keyboardType": "phone-pad",
          "subject": "",
        },
        Object {
          "claimData": Object {
            "addressLine1": "",
            "addressLine2": "",
            "city": "",
            "country": "",
            "postalCode": "",
          },
          "credentialType": "Postal Address",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "subject": "",
        },
      ],
      "Other": Array [
        Object {
          "claimData": Object {
            "random": "thing",
            "something": "else",
          },
          "credentialType": "IdCard",
          "expires": 2019-08-10T00:00:00.000Z,
          "id": "1",
          "issuer": Object {
            "did": "123",
          },
          "subject": "123",
        },
        Object {
          "claimData": Object {
            "random": "thing",
            "something": "else",
          },
          "credentialType": "Passport",
          "id": "2",
          "issuer": Object {
            "did": "123",
          },
          "subject": "123",
        },
        Object {
          "claimData": Object {
            "documentNumber": "12345",
            "random": "thing",
            "something": "else",
          },
          "credentialType": "IdCard",
          "expires": 2019-07-04T00:00:00.000Z,
          "id": "2",
          "issuer": Object {
            "did": "123",
          },
          "subject": "123",
        },
      ],
      "Personal": Array [
        Object {
          "claimData": Object {
            "familyName": "",
            "givenName": "",
          },
          "credentialType": "Name",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "subject": "",
        },
      ],
    },
    "pendingExternal": Object {
      "offer": Array [],
      "offeror": Object {
        "did": "",
      },
    },
    "selected": Object {
      "claimData": Object {},
      "credentialType": "",
      "id": "",
      "issuer": Object {
        "did": "",
      },
      "subject": "",
    },
  },
  "did": Object {
    "did": "mock did",
  },
  "loading": false,
}
`;

exports[`account reducer should initialize correctly 1`] = `
Object {
  "claims": Object {
    "decoratedCredentials": Object {
      "Contact": Array [
        Object {
          "claimData": Object {
            "email": "",
          },
          "credentialType": "Email",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "keyboardType": "email-address",
          "subject": "",
        },
        Object {
          "claimData": Object {
            "telephone": "",
          },
          "credentialType": "Mobile Phone",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "keyboardType": "phone-pad",
          "subject": "",
        },
        Object {
          "claimData": Object {
            "addressLine1": "",
            "addressLine2": "",
            "city": "",
            "country": "",
            "postalCode": "",
          },
          "credentialType": "Postal Address",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "subject": "",
        },
      ],
      "Other": Array [
        Object {
          "claimData": Object {
            "random": "thing",
            "something": "else",
          },
          "credentialType": "IdCard",
          "expires": 2019-08-10T00:00:00.000Z,
          "id": "1",
          "issuer": Object {
            "did": "123",
          },
          "subject": "123",
        },
        Object {
          "claimData": Object {
            "random": "thing",
            "something": "else",
          },
          "credentialType": "Passport",
          "id": "2",
          "issuer": Object {
            "did": "123",
          },
          "subject": "123",
        },
        Object {
          "claimData": Object {
            "documentNumber": "12345",
            "random": "thing",
            "something": "else",
          },
          "credentialType": "IdCard",
          "expires": 2019-07-04T00:00:00.000Z,
          "id": "2",
          "issuer": Object {
            "did": "123",
          },
          "subject": "123",
        },
      ],
      "Personal": Array [
        Object {
          "claimData": Object {
            "familyName": "",
            "givenName": "",
          },
          "credentialType": "Name",
          "id": "",
          "issuer": Object {
            "did": "",
          },
          "subject": "",
        },
      ],
    },
    "pendingExternal": Object {
      "offer": Array [],
      "offeror": Object {
        "did": "",
      },
    },
    "selected": Object {
      "claimData": Object {},
      "credentialType": "",
      "id": "",
      "issuer": Object {
        "did": "",
      },
      "subject": "",
    },
  },
  "did": "",
  "loading": false,
}
`;
